--- a/index.html
+++ b/index.html
@@ -3,12 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
+  <title>User Profile</title>
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
+  <h1>User Profile</h1>
+  <form>
+    <div>
+      <label for="profile-pic">Upload your picture:</label>
+      <input type="file" id="profile-pic" name="profile-pic" accept="image/*">
+    </div>
+    <div id="profile-pic-preview-container">
+      <img id="profile-pic-preview" src="placeholder.svg" alt="Profile picture preview">
+    </div>
+    <div>
+      <label for="weight">Weight (kg):</label>
+      <input type="number" id="weight" name="weight">
+    </div>
+    <div>
+      <label for="height">Height (cm):</label>
+      <input type="number" id="height" name="height">
+    </div>
+    <button type="submit">Save</button>
+  </form>
+  <hr>
+  <a href="details.html">Advanced Details</a>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
