--- a/index.html
+++ b/index.html
@@ -7,27 +7,29 @@
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>User Profile</h1>
-  <form>
-    <div>
-      <label for="profile-pic">Upload your picture:</label>
-      <input type="file" id="profile-pic" name="profile-pic" accept="image/*">
-    </div>
-    <div id="profile-pic-preview-container">
-      <img id="profile-pic-preview" src="placeholder.svg" alt="Profile picture preview">
-    </div>
-    <div>
-      <label for="weight">Weight (kg):</label>
-      <input type="number" id="weight" name="weight">
-    </div>
-    <div>
-      <label for="height">Height (cm):</label>
-      <input type="number" id="height" name="height">
-    </div>
-    <button type="submit">Save</button>
-  </form>
-  <hr>
-  <a href="details.html">Advanced Details</a>
+  <div class="container">
+    <h1>User Profile</h1>
+    <form>
+      <div>
+        <label for="profile-pic">Upload your picture:</label>
+        <input type="file" id="profile-pic" name="profile-pic" accept="image/*">
+      </div>
+      <div id="profile-pic-preview-container">
+        <img id="profile-pic-preview" src="placeholder.svg" alt="Profile picture preview">
+      </div>
+      <div>
+        <label for="weight">Weight (kg):</label>
+        <input type="number" id="weight" name="weight">
+      </div>
+      <div>
+        <label for="height">Height (cm):</label>
+        <input type="number" id="height" name="height">
+      </div>
+      <button type="submit">Save</button>
+    </form>
+    <hr>
+    <a href="details.html">Advanced Details</a>
+  </div>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
