feat: Add light/dark theme toggle

--- a/details.html
+++ b/details.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <button id="theme-toggle">Toggle Theme</button>
     <h1>Advanced Details</h1>
     <form>
       <div>
