--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <button id="theme-toggle">Toggle Theme</button>
     <h1>User Profile</h1>
     <form>
       <div>
