--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
         <label for="profile-pic">Upload your picture:</label>
         <input type="file" id="profile-pic" name="profile-pic" accept="image/*">
       </div>
-      <div id="profile-pic-preview-container">
-        <img id="profile-pic-preview" src="placeholder.svg" alt="Profile picture preview">
+      <div class="profile-display">
+        <div id="profile-pic-preview-container">
+          <img id="profile-pic-preview" src="placeholder.svg" alt="Profile picture preview">
+        </div>
+        <div id="avatar-container">
+          <div id="avatar">
+            <div class="avatar-head"></div>
+            <div class="avatar-body"></div>
+          </div>
+        </div>
       </div>
       <div>
         <label for="weight">Weight (kg):</label>
