--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <button id="theme-toggle">Toggle Theme</button>
     <h1>User Profile</h1>
     <form>
-      <div>
-        <label for="profile-pic">Upload your picture:</label>
-        <input type="file" id="profile-pic" name="profile-pic" accept="image/*">
-      </div>
       <div class="profile-display">
         <div id="profile-pic-preview-container">
           <img id="profile-pic-preview" src="placeholder.svg" alt="Profile picture preview">
+          <div class="upload-area">
+            <label for="profile-pic">Upload your picture:</label>
+            <input type="file" id="profile-pic" name="profile-pic" accept="image/*">
+          </div>
         </div>
         <div id="avatar-container">
           <div id="avatar">
