--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
     <a href="details.html">Advanced Details</a>
   </div>
   <script defer type="text/javascript" src="/main.js"></script>
+  <!-- Triggering new GitHub Actions workflow -->
 </body>
 </html>
