fix: Correct asset paths for GitHub Pages using site.baseurl

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>User Profile</title>
-  <link href='/style.css' rel='stylesheet'>
+  <link href='{{ site.baseurl }}/style.css' rel='stylesheet'>
 </head>
 <body>
   <div class="container">
@@ -39,6 +39,6 @@
     <hr>
     <a href="details.html">Advanced Details</a>
   </div>
-  <script defer type="text/javascript" src="/main.js"></script>
+  <script defer type="text/javascript" src="{{ site.baseurl }}/main.js"></script>
 </body>
 </html>
