--- a/details.html
+++ b/details.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Advanced Details</title>
-  <link href='/style.css' rel='stylesheet'>
+  <link href='{{ site.baseurl }}/style.css' rel='stylesheet'>
 </head>
 <body>
   <div class="container">
@@ -37,6 +37,6 @@
     <hr>
     <a href="index.html">Back to Profile</a>
   </div>
-  <script defer type="text/javascript" src="/main.js"></script>
+  <script defer type="text/javascript" src="{{ site.baseurl }}/main.js"></script>
 </body>
 </html>
